--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,11 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")
 
 add_subdirectory(external/benchmark)
 
-set(SOURCE_FILES src/pargrep.cpp src/main.cpp)
-add_executable(prep ${SOURCE_FILES})
+set(SOURCE_FILES src/pargrep.cpp src/regex_functions.cpp src/regex_functions.h)
 
-#target_link_libraries(prep PUBLIC benchmark)
+add_executable(benchmarks ${SOURCE_FILES} src/benchmarks.cpp)
+target_link_libraries(benchmarks PUBLIC benchmark)
+
+add_executable(prep ${SOURCE_FILES} src/main.cpp)
+
+
